--- a/RMS.App/Views/Requisitions/Feedback.cshtml
+++ b/RMS.App/Views/Requisitions/Feedback.cshtml
@@ -1,11 +1,11 @@
-﻿@model RMS.App.ViewModels.CommentViewModel
+﻿@model RMS.App.ViewModels.FeedbackViewModel
 
 @{
-    ViewBag.Title = "Notification";
+    ViewBag.Title = "Feedback";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Notification</h2>
+<h2>Feedback</h2>
 <hr />
 <div>
  
@@ -104,14 +104,15 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal row">
-
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
         
-    <div class="col-md-6">
-        <div class="form-group row">
+    <div class="col-md-10">
+        <div class="form-group">
             @Html.Label("Write a Comment", htmlAttributes: new {@class = "control-label col-md-3"})
             <div class="col-md-8">
-                @Html.EditorFor(model => model.Text, new {htmlAttributes = new {@class = "form-control"}})
-                @Html.ValidationMessageFor(model=>model.Text, "", new {@class = "text-danger"})
+                @Html.TextAreaFor(model => model.CommentText, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(model=>model.CommentText, "", new {@class = "text-danger"})
             </div>
         </div>
     </div>
@@ -122,4 +123,33 @@
     </div>
 
 }
+@{
+    var data = ViewBag.Feedback;
+}
+@if (data != null)
+{
+<div class="col-md-12">
+   
+        <div class="col-md-10">
+                @Html.Label("Comment", htmlAttributes: new { @class = "control-label col-md-3" })
+                
+                    <div class="col-md-8">
+                        <table>
+                            @foreach (var comment in data)
+                            {
+                                <tr>
+                                    <td>Employee &nbsp; @comment.Requisition.Employee.FullName &nbsp;&nbsp;</td>
 
+                                    <td>@comment.CommentText</td>
+                                    <td>@Html.ActionLink("Reply", "Reply", new {feedbackId = @comment.Id})</td>
+
+                                </tr>
+                            }
+                        </table>
+                    </div>
+                
+            </div>
+        </div>
+
+
+    }
