--- a/RMS.App/Views/Requisitions/RequisitionList.cshtml
+++ b/RMS.App/Views/Requisitions/RequisitionList.cshtml
@@ -75,7 +75,7 @@
                 <td>
                     @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
                     @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-                    @Html.ActionLink("Notification", "Notification", new { id = item.Id }) |
+                    @Html.ActionLink("Feedback", "Feedback", new { requisitionId = item.Id }) |
                     @Html.ActionLink("Delete", "Delete", new {id = item.Id})
                 </td>
             </tr>
