all setup jquery datatable added

--- a/RMS.App/Views/Departments/Create.cshtml
+++ b/RMS.App/Views/Departments/Create.cshtml
@@ -44,14 +44,13 @@
         <div class="form-group row">
             <div class="control-label col-md-2"></div>
             <div class="col-md-10">
-                @Html.ActionLink("Back to List", "Index","Departments", null, new {@class = "btn btn-info"}) &nbsp;
-                <input type="submit" value="Save" class="btn btn-default" id="btnSave?"/>
+                <input type="submit" value="Save" class="btn btn-success" id="btnSave?"/> &nbsp;
+                @Html.ActionLink("Back to List", "Index", "Departments", null, new { @class = "btn btn-info" })
 
             </div>
         </div>
     </div>
 }
-
 
 @section Scripts {
 
