--- a/RMS.App/Views/Employees/Edit.cshtml
+++ b/RMS.App/Views/Employees/Edit.cshtml
@@ -507,8 +507,9 @@
     <div class="form-group row">
         <div class="col-md-9"></div>
         <div class="col-md-3 text-right">
-            @Html.ActionLink("Back to List", "Index", null, new {@class = "btn btn-info"}) &nbsp;
-            <input type="submit" value="&nbsp; Update &nbsp;" class="btn btn-default"/>
+            <input type="submit" value="&nbsp; Update &nbsp;" class="btn btn-success" /> &nbsp;
+            @Html.ActionLink("Back to List", "Index", null, new {@class = "btn btn-info"})
+
 
         </div>
     </div>
