--- a/RMS.App/Views/Organizations/Create.cshtml
+++ b/RMS.App/Views/Organizations/Create.cshtml
@@ -54,8 +54,8 @@
         <div class="form-group row">
             <div class="control-label col-md-2 "></div>
             <div class="col-md-6 ">
-                @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new {@class = "btn btn-info"}) &nbsp;
-                <input type="submit" value="Create" class="btn btn-default"/>
+                <input type="submit" value="Create" class="btn btn-success"/> &nbsp;
+                @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-info" }) 
 
             </div>
         </div>
