--- a/RMS.App/Views/Departments/Delete.cshtml
+++ b/RMS.App/Views/Departments/Delete.cshtml
@@ -42,7 +42,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-dengar" /> &nbsp;
+            <input type="submit" value="Delete" class="btn btn-danger" /> &nbsp;
             @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
         </div>
     }
