--- a/RMS.App/Views/Designations/Delete.cshtml
+++ b/RMS.App/Views/Designations/Delete.cshtml
@@ -25,7 +25,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-denger" /> &nbsp;
+            <input type="submit" value="Delete" class="btn btn-danger" /> &nbsp;
             @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
         </div>
     }
