--- a/RMS.App/Views/Designations/Edit.cshtml
+++ b/RMS.App/Views/Designations/Edit.cshtml
@@ -28,7 +28,7 @@
         <div class="form-group row">
             <div class="control-label col-md-2"></div>
             <div class="col-md-10">
-                <input type="submit" value="Update" class="btn btn-default"/> &nbsp;
+                <input type="submit" value="Update" class="btn btn-success"/> &nbsp;
                 @Html.ActionLink("Back to List", "Index", null, new {@class = "btn btn-info"})
             </div>
         </div>
