--- a/RMS.App/Views/EmployeeTypes/Create.cshtml
+++ b/RMS.App/Views/EmployeeTypes/Create.cshtml
@@ -27,7 +27,7 @@
         <div class="form-group row">
             <div class="control-label col-md-2"></div>
             <div class="col-md-6">
-                <input type="submit" value="Create" class="btn btn-default" /> &nbsp;
+                <input type="submit" value="Create" class="btn btn-success" /> &nbsp;
                 @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info" })
             </div>
         </div>
