--- a/RMS.App/Views/EmployeeTypes/Index.cshtml
+++ b/RMS.App/Views/EmployeeTypes/Index.cshtml
@@ -2,12 +2,15 @@
 
 @{
     ViewBag.Title = "Employee Type List";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@section styles
+{
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
+}
 <div class="container">
     <h2>Employee Type List</h2>
-    <hr />
+    <hr/>
 
     @if (TempData["msg"] != null)
     {
@@ -19,11 +22,10 @@
         <div class="row align-items-center">
             <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
                 <p>
-                    @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-default" })
+                    @Html.ActionLink("Create New", "Create", null, new {@class = "btn btn-success"})
                 </p>
             </div>
-
-            <div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
+            @*<div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
                 <p>
                     @using (Html.BeginForm("Index", "EmployeeTypes", FormMethod.Get))
                     {
@@ -32,12 +34,13 @@
                         <input type="submit" value="Search" />
                     }
                 </p>
-            </div>
+            </div>*@
         </div>
     </div>
-
-    <table class="table table-bordered table-active table-striped">
-        <tr>
+    <br/>
+    <table id="example" class="table table-striped table-bordered table-hover" style="width: 100%">
+        <thead>
+        <tr class="bg-info">
             <th>
                 SL
             </th>
@@ -48,7 +51,8 @@
                 Action
             </th>
         </tr>
-
+        </thead>
+        <tbody>
         @{
             var sl = 0;
             if (Model.Count() != 0)
@@ -64,9 +68,9 @@
                             @Html.DisplayFor(modelItem => item.Type)
                         </td>
                         <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                            @Html.ActionLink("Edit", "Edit", new {id = item.Id}, new {@class = "btn btn-warning btn-sm"})
+                            @Html.ActionLink("Details", "Details", new {id = item.Id}, new {@class = "btn btn-primary btn-sm"})
+                            @Html.ActionLink("Delete", "Delete", new {id = item.Id}, new {@class = "btn btn-danger btn-sm"})
                         </td>
                     </tr>
                 }
@@ -78,6 +82,32 @@
                 </tr>
             }
         }
-
+        </tbody>
+        <tfoot>
+        <tr class="bg-secondary">
+            <th>
+                SL
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Type)
+            </th>
+            <th>
+                Action
+            </th>
+        </tr>
+        </tfoot>
     </table>
 </div>
+    
+@section scripts
+{
+
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#example').DataTable();
+        });
+    </script>
+}
