--- a/RMS.App/Views/Employees/Create.cshtml
+++ b/RMS.App/Views/Employees/Create.cshtml
@@ -363,7 +363,7 @@
             <div class="form-group row">
                 <div class="col-md-2"></div>
                 <div class="col-md-6">
-                    <input type="submit" value="Save" class="btn btn-default"/>&nbsp;
+                    <input type="submit" value="Save" class="btn btn-success"/> &nbsp;
                     @Html.ActionLink("Back to List", "Index", null, new {@class = "btn btn-info"})
                 </div>
             </div>
