--- a/RMS.App/Views/Employees/Index.cshtml
+++ b/RMS.App/Views/Employees/Index.cshtml
@@ -3,6 +3,11 @@
 @{
     ViewBag.Title = "Employee List";
 }
+@section styles
+{
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
+}
 <div class="container">
     <h2>Employee List</h2>
     <hr />
@@ -17,11 +22,11 @@
         <div class="row align-items-center">
             <div class="col-lg-3 col-sm-3 col-3 text-left no-padding">
                 <p>
-                    @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-default" })
+                    @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-success" })
                 </p>
             </div>
 
-            <div class="col-lg-9 col-sm-9 col-9 text-right no-padding">
+            @*<div class="col-lg-9 col-sm-9 col-9 text-right no-padding">
                 <p>
                     @using (Html.BeginForm("Index", "Employees", FormMethod.Get))
                     {
@@ -30,49 +35,52 @@
                         <input type="submit" value="Search" />
                     }
                 </p>
-            </div>
+            </div>*@
         </div>
     </div>
-
-    <table class="table table-bordered table-active table-striped">
-        <tr>
-            <th>
-                SL
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FullName)
-            </th>
-            @*<th>
-                    @Html.DisplayNameFor(model => model.OrganizationId)
+    <br/>
+    <table id="example" class="table table-striped table-bordered table-hover" style="width: 100%">
+        <thead>
+            <tr class="bg-info">
+                <th>
+                    SL
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.DepartmentId)
+                    @Html.DisplayNameFor(model => model.FullName)
+                </th>
+                @*<th>
+                @Html.DisplayNameFor(model => model.OrganizationId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DepartmentId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DesignationId)
+            </th>*@
+                <th>
+                    @Html.DisplayNameFor(model => model.ContactNo)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.DesignationId)
-                </th>*@
-            <th>
-                @Html.DisplayNameFor(model => model.ContactNo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NID)
-            </th>
-            @*<th>
-                    @Html.DisplayNameFor(model => model.DrivingLicence)
-                </th>*@
-            <th>
-                @Html.DisplayNameFor(model => model.BloodGroup)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EmployeeTypeId)
-            </th>
-            <th>
-                Action
-            </th>
-        </tr>
+                    @Html.DisplayNameFor(model => model.Email)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.NID)
+                </th>
+                @*<th>
+                @Html.DisplayNameFor(model => model.DrivingLicence)
+            </th>*@
+                <th>
+                    @Html.DisplayNameFor(model => model.BloodGroup)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.EmployeeTypeId)
+                </th>
+                <th>
+                    Action
+                </th>
+            </tr>
+        </thead>
+        <tbody>
         @{
             var sl = 0;
             if (Model.Count() != 0)
@@ -115,9 +123,9 @@
                             @Html.DisplayFor(modelItem => item.EmployeeType.Type)
                         </td>
                         <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" })
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-sm" })
                         </td>
                     </tr>
                 }
@@ -129,9 +137,74 @@
                 </tr>
             }
         }
+        </tbody>
+        <tfoot>
+            <tr class="bg-secondary">
+                <th>
+                    SL
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.FullName)
+                </th>
+                @*<th>
+                @Html.DisplayNameFor(model => model.OrganizationId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DepartmentId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DesignationId)
+            </th>*@
+                <th>
+                    @Html.DisplayNameFor(model => model.ContactNo)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Email)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.NID)
+                </th>
+                @*<th>
+                @Html.DisplayNameFor(model => model.DrivingLicence)
+            </th>*@
+                <th>
+                    @Html.DisplayNameFor(model => model.BloodGroup)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.EmployeeTypeId)
+                </th>
+                <th>
+                    Action
+                </th>
+            </tr>
+        </tfoot>
 
     </table>
 </div>
+
+@section scripts
+{
+
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#example').DataTable();
+        });
+    </script>
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
