--- a/RMS.App/Views/Organizations/Edit.cshtml
+++ b/RMS.App/Views/Organizations/Edit.cshtml
@@ -46,7 +46,7 @@
         <div class="form-group row">
             <div class="control-label col-md-2 "></div>
             <div class="col-md-6">
-                <input type="submit" value="Update" class="btn btn-default"/> &nbsp;
+                <input type="submit" value="Update" class="btn btn-warning"/> &nbsp;
                 @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new {@class = "btn btn-info"})
             </div>
         </div>
