--- a/RMS.App/Views/Vehicles/Create.cshtml
+++ b/RMS.App/Views/Vehicles/Create.cshtml
@@ -68,7 +68,7 @@
         <div class="form-group row">
             <div class="control-label col-md-2"></div>
             <div class="col-md-10">
-                <input type="submit" value="Create" class="btn btn-default"/> &nbsp;
+                <input type="submit" value="Create" class="btn btn-success"/> &nbsp;
                 @Html.ActionLink("Back to List", "Index", null, new {@class = "btn btn-info"})
             </div>
         </div>
@@ -77,6 +77,6 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/jquery-3.2.1.min.js"></script>
 
 }
