--- a/RMS.App/Views/Requisitions/CreateRequestForOther.cshtml
+++ b/RMS.App/Views/Requisitions/CreateRequestForOther.cshtml
@@ -4,46 +4,37 @@
 @{
     Layout = null;
 }
+<div>
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width"/>
-    <title>Create Request For Other</title>
-
-</head>
-
-<body>
-    @using (Html.BeginForm("CreateRequestForOther","Requisitions",FormMethod.Post)) 
+    @using (Html.BeginForm("CreateRequestForOther", "Requisitions", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            
-            @Html.ValidationSummary(true, "", new {@class = "text-danger"})
+
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
             <div class="form-group row">
-                @Html.LabelFor(model => model.FromPlace, htmlAttributes: new {@class = "control-label col-md-3"})
+                @Html.LabelFor(model => model.FromPlace, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
-                    @Html.EditorFor(model => model.FromPlace, new {htmlAttributes = new {@class = "form-control"}})
-                    @Html.ValidationMessageFor(model => model.FromPlace, "", new {@class = "text-danger"})
+                    @Html.EditorFor(model => model.FromPlace, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.FromPlace, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group row">
-                @Html.LabelFor(model => model.DestinationPlace, htmlAttributes: new {@class = "control-label col-md-3"})
+                @Html.LabelFor(model => model.DestinationPlace, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
-                    @Html.EditorFor(model => model.DestinationPlace, new {htmlAttributes = new {@class = "form-control"}})
-                    @Html.ValidationMessageFor(model => model.DestinationPlace, "", new {@class = "text-danger"})
+                    @Html.EditorFor(model => model.DestinationPlace, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.DestinationPlace, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group row">
-                @Html.LabelFor(model => model.StartDateTime, htmlAttributes: new {@class = "control-label col-md-3"})
+                @Html.LabelFor(model => model.StartDateTime, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-4">
-                    @Html.EditorFor(model => model.StartDateTime, new {htmlAttributes = new {@class = "form-control datePicker" } })
-                    @Html.ValidationMessageFor(model => model.StartDateTime, "", new {@class = "text-danger"})
+                    @Html.EditorFor(model => model.StartDateTime, new { htmlAttributes = new { @class = "form-control datePicker" } })
+                    @Html.ValidationMessageFor(model => model.StartDateTime, "", new { @class = "text-danger" })
                 </div>
 
                 @Html.LabelFor(model => model.StartTime, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -54,10 +45,10 @@
             </div>
 
             <div class="form-group row">
-                @Html.LabelFor(model => model.EndDateTime, htmlAttributes: new {@class = "control-label col-md-3"})
+                @Html.LabelFor(model => model.EndDateTime, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-4">
-                    @Html.EditorFor(model => model.EndDateTime, new {htmlAttributes = new {@class = "form-control datePicker" } })
-                    @Html.ValidationMessageFor(model => model.EndDateTime, "", new {@class = "text-danger"})
+                    @Html.EditorFor(model => model.EndDateTime, new { htmlAttributes = new { @class = "form-control datePicker" } })
+                    @Html.ValidationMessageFor(model => model.EndDateTime, "", new { @class = "text-danger" })
                 </div>
 
                 @Html.LabelFor(model => model.EndTime, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -68,39 +59,38 @@
             </div>
 
             <div class="form-group row">
-                @Html.LabelFor(model => model.Description, htmlAttributes: new {@class = "control-label col-md-3"})
+                @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
-                    @Html.EditorFor(model => model.Description, new {htmlAttributes = new {@class = "form-control"}})
-                    @Html.ValidationMessageFor(model => model.Description, "", new {@class = "text-danger"})
+                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group row">
-                @Html.LabelFor(model => model.RequestFor, htmlAttributes: new {@class = "control-label col-md-3"})
+                @Html.LabelFor(model => model.RequestFor, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
-                    @Html.EditorFor(model => model.RequestFor, new {htmlAttributes = new {@class = "form-control"}})
-                    @Html.ValidationMessageFor(model => model.RequestFor, "", new {@class = "text-danger"})
+                    @Html.EditorFor(model => model.RequestFor, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.RequestFor, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group row">
-                @Html.LabelFor(model => model.EmployeeId, htmlAttributes: new {@class = "control-label col-md-3"})
+                @Html.LabelFor(model => model.EmployeeId, htmlAttributes: new { @class = "control-label col-md-3" })
                 <div class="col-md-9">
-                    @Html.DropDownList("EmployeeId", null, "Select", htmlAttributes: new {@class = "form-control"})
-                    @Html.ValidationMessageFor(model => model.EmployeeId, "", new {@class = "text-danger"})
+                    @Html.DropDownList("EmployeeId", null, "Select", htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
                 </div>
             </div>
 
             <div class="form-group row">
                 <div class="col-md-3"></div>
                 <div class="col-md-9">
-                    <input type="submit" value="Create" class="btn btn-success"/> &nbsp;
+                    <input type="submit" value="Create" class="btn btn-success" /> &nbsp;
                     <a href="#" class="btn btn-warning" data-dismiss="modal">Cancel</a> &nbsp;
-                    @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new {@class = "btn btn-info"})
+                    @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-info" })
                 </div>
             </div>
         </div>
     }
 
-</body>
-</html>
+</div>
