--- a/RMS.App/Views/Requisitions/Edit.cshtml
+++ b/RMS.App/Views/Requisitions/Edit.cshtml
@@ -102,7 +102,7 @@
             <div class="form-group row">
                 <div class="col-md-3"></div>
                 <div class="col-md-5">
-                    <input type="submit" value="Update" class="btn btn-default" /> &nbsp;
+                    <input type="submit" value="Update" class="btn btn-success" /> &nbsp;
                     @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info" })
                 </div>
             </div>
