--- a/RMS.App/Views/Requisitions/Feedback.cshtml
+++ b/RMS.App/Views/Requisitions/Feedback.cshtml
@@ -2,154 +2,131 @@
 
 @{
     ViewBag.Title = "Feedback";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Feedback</h2>
 <hr />
-<div>
- 
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Requisition.Employee.FullName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Requisition.Employee.FullName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Requisition.RequisitionNumber)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Requisition.RequisitionNumber)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Requisition.FromPlace)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Requisition.FromPlace)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Requisition.DestinationPlace)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Requisition.DestinationPlace)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Requisition.StartDateTime)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Requisition.StartDateTime)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Requisition.StartDateTime)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Requisition.StartDateTime)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Requisition.EndDateTime)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Requisition.EndDateTime)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Requisition.EndDateTime)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Requisition.EndDateTime)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Requisition.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Requisition.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Requisition.RequestFor)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Requisition.RequestFor)
-        </dd>
-        <dd>
-            @Html.HiddenFor(model => model.Requisition.Id)
-        </dd>
-    </dl>
+<div class="container border">
+    <br/>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="form-group row">
+                @Html.Label("Name", htmlAttributes: new {@class = "control-label col-md-3"})
+                <div class="col-md-9">
+                    @Html.EditorFor(model => model.Requisition.Employee.FullName, new {htmlAttributes = new {@class = "form-control", @readOnly = "readonly"}})
+                </div>
+            </div>
+            <div class="form-group row">
+                @Html.Label("Requisition No", htmlAttributes: new {@class = "control-label col-md-3"})
+                <div class="col-md-9">
+                    @Html.EditorFor(model => model.Requisition.RequisitionNumber, new {htmlAttributes = new {@class = "form-control", @readOnly = "readonly"}})
+                </div>
+            </div>
+            <div class="form-group row">
+                @Html.Label("From Place", htmlAttributes: new {@class = "control-label col-md-3"})
+                <div class="col-md-9">
+                    @Html.EditorFor(model => model.Requisition.FromPlace, new {htmlAttributes = new {@class = "form-control", @readOnly = "readonly"}})
+                </div>
+            </div>
+            <div class="form-group row">
+                @Html.Label("Destination Place", htmlAttributes: new {@class = "control-label col-md-3", @readOnly = "readonly"})
+                <div class="col-md-9">
+                    @Html.EditorFor(model => model.Requisition.DestinationPlace, new {htmlAttributes = new {@class = "form-control", @readOnly = "readonly"}})
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group row">
+                @Html.Label("Journey Date", htmlAttributes: new {@class = "control-label col-md-3"})
+                <div class="col-md-9">
+                    @Html.EditorFor(model => model.Requisition.StartDateTime, new {htmlAttributes = new {@class = "form-control", @readOnly = "readonly"}})
+                </div>
+            </div>
+            <div class="form-group row">
+                @Html.Label("Return Date", htmlAttributes: new {@class = "control-label col-md-3"})
+                <div class="col-md-9">
+                    @Html.EditorFor(model => model.Requisition.EndDateTime, new {htmlAttributes = new {@class = "form-control", @readOnly = "readonly"}})
+                </div>
+            </div>
+            <div class="form-group row">
+                @Html.Label("Description", htmlAttributes: new {@class = "control-label col-md-3"})
+                <div class="col-md-9">
+                    @Html.EditorFor(model => model.Requisition.Description, new {htmlAttributes = new {@class = "form-control", @readOnly = "readonly"}})
+                </div>
+            </div>
+            <div class="form-group row">
+                @Html.Label("Requist For", htmlAttributes: new {@class = "control-label col-md-3"})
+                <div class="col-md-9">
+                    @Html.EditorFor(model => model.Requisition.RequestFor, new {htmlAttributes = new {@class = "form-control", @readOnly = "readonly"}})
+                </div>
+            </div>
+        </div>
+    </div>
+    @Html.HiddenFor(model => model.Requisition.Id)
+    <br/>
 </div>
-<p>
-
-    @Html.ActionLink("Back to List", "Index")
-</p>
-    
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal row">
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
+<br/>
+<div class="container border">
+    <br/>
+    <div class="row"  style="margin: 10px 10px;">
         
-    <div class="col-md-10">
-        <div class="form-group">
-            @Html.Label("Write a Comment", htmlAttributes: new {@class = "control-label col-md-3"})
-            <div class="col-md-8">
-                @Html.TextAreaFor(model => model.CommentText, new {htmlAttributes = new {@class = "form-control"}})
-                @Html.ValidationMessageFor(model=>model.CommentText, "", new {@class = "text-danger"})
-            </div>
-        </div>
-    </div>
+        <div class="col-md-5">
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-        <div class="col-md-9">
-            <input type="submit" value="Post" class="btn btn-success" /> &nbsp;
-        </div>
-    </div>
+                <div class="form-horizontal row">
+                    @Html.ValidationSummary(true, "", new {@class = "text-danger"})
+                    @Html.HiddenFor(model => model.Id)
 
-}
-@{
-    var data = ViewBag.Feedback;
-}
-@if (data != null)
-{
-<div class="col-md-12">
-   
-        <div class="col-md-10">
-                @Html.Label("Comment", htmlAttributes: new { @class = "control-label col-md-3" })
-                
-                    <div class="col-md-8">
-                        <table>
-                            @foreach (var comment in data)
-                            {
-                                <tr>
-                                    <td>Employee &nbsp; @comment.Requisition.Employee.FullName &nbsp;&nbsp;</td>
-
-                                    <td>@comment.CommentText</td>
-                                    <td>@Html.ActionLink("Reply", "Reply", new {feedbackId = @comment.Id})</td>
-
-                                </tr>
-                            }
-                        </table>
+                    <div class="form-group row">
+                        @Html.LabelFor(model => model.CommentText, htmlAttributes: new {@class = "control-label col-md-12"})
+                        <div class="col-md-12">
+                            @Html.EditorFor(model => model.CommentText, new {htmlAttributes = new {@class = "form-control"}})
+                            @Html.ValidationMessageFor(model => model.CommentText, "", new {@class = "text-danger"})
+                        </div>
                     </div>
-                
-            </div>
+                </div>
+                <div class="col-md-9">
+                    <input type="submit" value="Post" class="btn btn-success" /> &nbsp;
+                    @Html.ActionLink("Back to List", "Create","Requisitions", null, new { @class = "btn btn-info" })
+                </div>
+            }
+            
         </div>
+        <div class="col-md-7">
+            @{
+                var data = ViewBag.Feedback;
+            }
+            @if (data != null)
+            {
+                <div class="row">
+                    <div class="col-md-12">
+                        @Html.Label("Comment", htmlAttributes: new { @class = "control-label col-md-3" })
+                    </div>
+                    <div class="col-md-12">
+                            <table class="table table-bordered">
+                                @foreach (var comment in data)
+                                {
+                                    <tr>
+                                        <td>Employee :&nbsp; @comment.Requisition.Employee.FullName &nbsp;&nbsp;</td>
 
+                                        <td>Comment :&nbsp; @comment.CommentText</td>
+                                        <td>@Html.ActionLink("Reply", "Reply", new {feedbackId = @comment.Id},new {@class="btn btn-primary btn-sm"})</td>
 
-    }
+                                    </tr>
+                                }
+                            </table>
+                        </div>
+                </div>
+            }
+        </div>
+    </div>
+    <br/>
+</div>
+<div class=""><p></p></div>
+
+@section Scripts {
+
+    @Scripts.Render("~/bundles/jqueryval")
+}
