--- a/RMS.App/Views/Requisitions/Index.cshtml
+++ b/RMS.App/Views/Requisitions/Index.cshtml
@@ -3,12 +3,15 @@
 @{
     ViewBag.Title = "All Requisitions";
 }
-
+@section styles
+{
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
+}
 <h2>All Requisitions</h2>
 <hr/>
 
 <div class="container">
-    
 
     @if (TempData["msg"] != null)
     {
@@ -20,11 +23,11 @@
         <div class="row align-items-center">
             <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
                 <p>
-                    @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-default" })
+                    @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-success" })
                 </p>
             </div>
 
-            <div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
+            @*<div class="col-lg-8 col-sm-8 col-8 text-right no-padding">
                 <p>
                     @using (Html.BeginForm("Index", "Requisitions", FormMethod.Get))
                     {
@@ -33,43 +36,43 @@
                         <input type="submit" value="Search" />
                     }
                 </p>
-                @*<input type="text" placeholder="Search" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Search () '" />
-                    <button class="nw-btn primary-btn">Search<span class="lnr lnr-arrow-right"></span></button>*@
-            </div>
+            </div>*@
         </div>
     </div>
-
-    <table class="table table-bordered table-active table-striped">
-        <tr>
-            <td>
-                SL
-            </td>
-            <th>
-                @Html.DisplayNameFor(model => model.Employee.FullName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FromPlace)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DestinationPlace)
-            </th>
-            <th>
-                
-                @Html.DisplayNameFor(model => model.StartDateTime)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EndDateTime)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RequestFor)
-            </th>
-            <th>
-                Action
-            </th>
-        </tr>
+    <br/>
+    <table id="example" class="table table-striped table-bordered table-hover" style="width: 100%">
+        <thead>
+            <tr class="bg-info">
+                <td>
+                    SL
+                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.Employee.FullName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.FromPlace)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DestinationPlace)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.StartDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.EndDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Description)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.RequestFor)
+                </th>
+                <th>
+                    Action
+                </th>
+            </tr>
+        </thead>
+        <tbody>
         @{
             var sl = 0;
             if (Model.Count() != 0)
@@ -103,9 +106,9 @@
                             @Html.DisplayFor(modelItem => item.RequestFor)
                         </td>
                         <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" })
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-sm" })
                         </td>
                     </tr>
                 }
@@ -117,8 +120,49 @@
                 </tr>
             }
         }
-
-
+        </tbody>
+        <tfoot>
+            <tr class="bg-secondary">
+                <td>
+                    SL
+                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.Employee.FullName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.FromPlace)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DestinationPlace)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.StartDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.EndDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Description)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.RequestFor)
+                </th>
+                <th>
+                    Action
+                </th>
+            </tr>
+        </tfoot>
     </table>
 </div>
+@section scripts
+{
 
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#example').DataTable();
+        });
+    </script>
+}
