--- a/RMS.App/Views/Requisitions/Reply.cshtml
+++ b/RMS.App/Views/Requisitions/Reply.cshtml
@@ -6,39 +6,36 @@
 }
 
 <h2>Reply</h2>
-
+<hr/>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-                @Html.HiddenFor(model => model.Id)
-                @Html.HiddenFor(model => model.RequisitionId)
-        <h4>FeedbackViewModel</h4>
-        <hr/>
+        
+        @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.RequisitionId)
+
         @Html.ValidationSummary(true, "", new {@class = "text-danger"})
-        <div class="form-group">
-            @Html.LabelFor(model => model.CommentText, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
+
+        <div class="form-group row">
+            @Html.LabelFor(model => model.CommentText, htmlAttributes: new {@class = "control-label col-md-3"})
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.CommentText, new {htmlAttributes = new {@class = "form-control"}})
                 @Html.ValidationMessageFor(model => model.CommentText, "", new {@class = "text-danger"})
             </div>
         </div>
 
-        
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Reply" class="btn btn-default"/>
+        <div class="form-group row">
+            <div class="col-md-3"></div>
+            <div class="col-md-5">
+                <input type="submit" value="Reply" class="btn btn-primary"/> &nbsp;
+                @Html.ActionLink("Back to List", "Create", "Requisitions", null, new {@class = "btn btn-info"})
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
