--- a/RMS.App/Views/Requisitions/RequisitionList.cshtml
+++ b/RMS.App/Views/Requisitions/RequisitionList.cshtml
@@ -4,91 +4,116 @@
     Layout = null;
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Requisition List</title>
-</head>
-<body>
+<div style="margin-left: 15px;">
     <p>
-        @Html.ActionLink("Create New", "Create", null, htmlAttributes:new {@class="btn btn-default"})
+        @Html.ActionLink("Create New", "Create", null, htmlAttributes: new { @class = "btn btn-success" })
     </p>
-    <table class="table table-bordered table-active table-striped">
-        <tr>
-            <th>
-                SL
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Employee.FullName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FromPlace)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DestinationPlace)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StartDateTime)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EndDateTime)
-            </th>
-            @*<th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>*@
-            <th>
-                Action
-            </th>
-        </tr>
-    
-@{
-    var sl = 0;
-    if (Model.Count() != 0)
-    {
-        foreach (var item in Model)
-        {
-            sl++;
-            <tr>
-                <td>@sl
-                    
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Employee.FullName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FromPlace)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DestinationPlace)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.StartDateTime)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EndDateTime)
-                </td>
-                 @*<td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>*@
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                    @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-                    @Html.ActionLink("Feedback", "Feedback", new { requisitionId = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new {id = item.Id})
-                </td>
+    <table id="example1" class="table table-striped table-bordered table-hover" style="width: 100%">
+        <thead>
+            <tr class="bg-info">
+                <th>
+                    SL
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Employee.FullName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.FromPlace)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DestinationPlace)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.StartDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.EndDateTime)
+                </th>
+                @*<th>
+                        @Html.DisplayNameFor(model => model.Description)
+                    </th>*@
+                <th>
+                    Action
+                </th>
             </tr>
-        }
-    }
-    else
-    {
-        <tr>
-            <td class="text-center text-danger" colspan="7"> Data Not Found!</td>
-        </tr>
-      }
-}
-    
+
+        </thead>
+        <tbody>
+            @{
+                var sl = 0;
+                if (Model.Count() != 0)
+                {
+                    foreach (var item in Model)
+                    {
+                        sl++;
+                        <tr>
+                            <td>
+                                @sl
+
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Employee.FullName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.FromPlace)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.DestinationPlace)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.StartDateTime)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.EndDateTime)
+                            </td>
+                            @*<td>
+                                    @Html.DisplayFor(modelItem => item.Description)
+                                </td>*@
+                            <td>
+                                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                                @Html.ActionLink("Feedback", "Feedback", new { requisitionId = item.Id }) |
+                                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                            </td>
+                        </tr>
+                    }
+                }
+                else
+                {
+                    <tr>
+                        <td class="text-center text-danger" colspan="7"> Data Not Found!</td>
+                    </tr>
+                }
+            }
+        </tbody>
+        <tfoot>
+            <tr class="bg-secondary text-white">
+                <th>
+                    SL
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Employee.FullName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.FromPlace)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DestinationPlace)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.StartDateTime)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.EndDateTime)
+                </th>
+                @*<th>
+                        @Html.DisplayNameFor(model => model.Description)
+                    </th>*@
+                <th>
+                    Action
+                </th>
+            </tr>
+        </tfoot>
     </table>
-</body>
-</html>
+</div>
+    
