--- a/RMS.App/Views/Requisitions/CreateRequestForOther.cshtml
+++ b/RMS.App/Views/Requisitions/CreateRequestForOther.cshtml
@@ -87,7 +87,7 @@
                 <div class="col-md-9">
                     <input type="submit" value="Create" class="btn btn-success" /> &nbsp;
                     <a href="#" class="btn btn-warning" data-dismiss="modal">Cancel</a> &nbsp;
-                    @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-info" })
+                    @Html.ActionLink("Back to List", "Create", null, htmlAttributes: new { @class = "btn btn-info" })
                 </div>
             </div>
         </div>
