--- a/RMS.App/Views/Requisitions/Delete.cshtml
+++ b/RMS.App/Views/Requisitions/Delete.cshtml
@@ -39,6 +39,6 @@
 
     <div class="form-actions no-color">
         <input type="submit" value="Delete" class="btn btn-danger" /> &nbsp;
-        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info" })
+        @Html.ActionLink("Back to List", "Create", null, new { @class = "btn btn-info" })
     </div>
 }
