--- a/RMS.App/Views/Requisitions/Details.cshtml
+++ b/RMS.App/Views/Requisitions/Details.cshtml
@@ -36,5 +36,5 @@
 <br/>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id },new {@class="btn btn-warning"}) &nbsp;
-    @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
+    @Html.ActionLink("Back to List", "Create",null,new {@class="btn btn-info"})
 </p>
