--- a/RMS.App/Views/AssignRequisitions/Cancel.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Cancel.cshtml
@@ -5,54 +5,52 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Cancel</h2>
-
+<h2>Cancel Requisition</h2>
+<hr/>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Requisition Status </h4>
-        <hr/>
+
         @Html.ValidationSummary(true, "", new {@class = "text-danger"})
         @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.StatusType, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.StatusType, new {htmlAttributes = new {@class = "form-control"}})
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.StatusType, new {htmlAttributes = new {@class = "form-control", @disabled = "disabled" } })
                 @Html.ValidationMessageFor(model => model.StatusType, "", new {@class = "text-danger"})
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RequisitionNumber, new {htmlAttributes = new {@class = "form-control"}})
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.RequisitionNumber, new {htmlAttributes = new {@class = "form-control", @disabled = "disabled" } })
                 @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new {@class = "text-danger"})
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group row">
             @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.RequisitionId, new {htmlAttributes = new {@class = "form-control"}})
+            <div class="col-md-5">
+                @Html.EditorFor(model => model.RequisitionId, new {htmlAttributes = new {@class = "form-control", @disabled = "disabled" } })
                 @Html.ValidationMessageFor(model => model.RequisitionId, "", new {@class = "text-danger"})
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Cancel" class="btn btn-default"/>
+        <div class="form-group row">
+            <div class="col-md-2"></div>
+            <div class="col-md-5">
+                <input type="submit" value="Cancel" class="btn btn-warning"/> &nbsp;
+                @Html.ActionLink("Back to List", "Requests",null,new {@class="btn btn-info"})
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
