--- a/RMS.App/Views/AssignRequisitions/Delete.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Delete.cshtml
@@ -41,7 +41,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-denger"/> &nbsp;
+            <input type="submit" value="Delete" class="btn btn-danger"/> &nbsp;
             @Html.ActionLink("Back to List", "Index", null, new {@class = "btn btn-info"})
         </div>
     }
