--- a/RMS.App/Views/AssignRequisitions/Edit.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Edit.cshtml
@@ -2,201 +2,206 @@
 
 @{
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
+<h3>Edit Assigned Requisition</h3>
+<hr/>
 @if (Model != null)
 {
-    <div class="row">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h4>Assigned Requisition Info :</h4>
+                <br/>
+                <table class="table table-light table-active table-primary">
 
-        <div class="col-md-4">
-            <h4>Assign Requisition Details</h4>
-            <br />
-            <table class="table table-light table-active table-primary table-hover">
-
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Requisition.RequisitionNumber)</td>
-                    <td>@Html.DisplayFor(model => model.Requisition.RequisitionNumber)</td>
-                </tr>
-                <tr>
-                    <td>@Html.DisplayName("Requestor Full Name")</td>
-                    <td>@Html.DisplayFor(model => model.Requisition.Employee.FullName)</td>
-                </tr>
-                <tr>
-                    <td>@Html.DisplayName("Designation")</td>
-                    <td>@Html.DisplayFor(model => model.Requisition.Employee.Designation.Title)</td>
-                </tr>
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Requisition.Employee.ContactNo)</td>
-                    <td>@Html.DisplayFor(model => model.Employee.ContactNo)</td>
-                </tr>
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Requisition.Employee.Email)</td>
-                    <td>@Html.DisplayFor(model => model.Employee.Email)</td>
-                </tr>
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Requisition.RequestFor)</td>
-                    <td>@Html.DisplayFor(model => model.Requisition.RequestFor)</td>
-                </tr>
-            </table>
-        </div>
-
-        <div class="col-md-4">
-            <h4>Where When ...????</h4>
-            <br />
-            <table class="table table-light table-active table-primary table-hover">
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Requisition.StartDateTime)</td>
-                    <td>@Html.DisplayFor(model => model.Requisition.StartDateTime)</td>
-                </tr>
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Requisition.EndDateTime)</td>
-                    <td>@Html.DisplayFor(model => model.Requisition.EndDateTime)</td>
-                </tr>
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Requisition.FromPlace)</td>
-                    <td>@Html.DisplayFor(model => model.Requisition.FromPlace)</td>
-                </tr>
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Requisition.DestinationPlace)</td>
-                    <td>@Html.DisplayFor(model => model.Requisition.DestinationPlace)</td>
-                </tr>
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Requisition.Description)</td>
-                    <td>@Html.DisplayFor(model => model.Requisition.Description)</td>
-                </tr>
-
-            </table>
+                    <tr>
+                        <td style="width: 25%">@Html.DisplayNameFor(model => model.Requisition.RequisitionNumber)</td>
+                        <td>@Html.DisplayFor(model => model.Requisition.RequisitionNumber)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayName("Requestor Full Name")</td>
+                        <td>@Html.DisplayFor(model => model.Requisition.Employee.FullName)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayName("Designation")</td>
+                        <td>@Html.DisplayFor(model => model.Requisition.Employee.Designation.Title)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Requisition.Employee.ContactNo)</td>
+                        <td>@Html.DisplayFor(model => model.Employee.ContactNo)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Requisition.Employee.Email)</td>
+                        <td>@Html.DisplayFor(model => model.Employee.Email)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Requisition.RequestFor)</td>
+                        <td>@Html.DisplayFor(model => model.Requisition.RequestFor)</td>
+                    </tr>
+                </table>
             </div>
-        <div class="col-md-4">
-            <h4>Vehicle Information</h4>
-            <br />
-            <table class="table table-light table-active table-primary table-hover">
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Vehicle.BrandName)</td>
-                    <td>@Html.DisplayFor(model => model.Vehicle.BrandName)</td>
-                </tr>
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Vehicle.RegNo)</td>
-                    <td>@Html.DisplayFor(model => model.Vehicle.RegNo)</td>
-                </tr>
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Vehicle.ModelName)</td>
-                    <td>@Html.DisplayFor(model => model.Vehicle.ModelName)</td>
-                </tr>
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Vehicle.SeatCapacity)</td>
-                    <td>@Html.DisplayFor(model => model.Vehicle.SeatCapacity)</td>
-                </tr>
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Vehicle.VehicleType.Name)</td>
-                    <td>@Html.DisplayFor(model => model.Vehicle.VehicleType.Name)</td>
-                </tr>
 
-            </table>
-      </div>
-        <div class="col-md-4">
-            <h4>Driver Information</h4>
-            <br/>
-            <table class="table table-danger table-active table-primary table-hover">
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Employee.FullName)</td>
-                    <td>@Html.DisplayFor(model => model.Employee.FullName)</td>
-                </tr>
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Employee.Designation.Title)</td>
-                    <td>@Html.DisplayFor(model => model.Employee.Designation.Title)</td>
-                </tr>
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Employee.ContactNo)</td>
-                    <td>@Html.DisplayFor(model => model.Employee.ContactNo)</td>
-                </tr>
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.Employee.NID)</td>
-                    <td>@Html.DisplayFor(model => model.Employee.NID)</td>
-                </tr>
+            <div class="col-md-4">
+                <h4>Journey Info :</h4>
+                <br/>
+                <table class="table table-light table-active table-primary">
+                    <tr>
+                        <td style="width: 25%">@Html.DisplayNameFor(model => model.Requisition.StartDateTime)</td>
+                        <td>@Html.DisplayFor(model => model.Requisition.StartDateTime)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Requisition.EndDateTime)</td>
+                        <td>@Html.DisplayFor(model => model.Requisition.EndDateTime)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Requisition.FromPlace)</td>
+                        <td>@Html.DisplayFor(model => model.Requisition.FromPlace)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Requisition.DestinationPlace)</td>
+                        <td>@Html.DisplayFor(model => model.Requisition.DestinationPlace)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Requisition.Description)</td>
+                        <td>@Html.DisplayFor(model => model.Requisition.Description)</td>
+                    </tr>
 
-            </table>
+                </table>
+            </div>
+            <div class="col-md-4">
+                <h4>Vehicle Information :</h4>
+                <br/>
+                <table class="table table-light table-active table-primary">
+                    <tr>
+                        <td style="width: 25%">@Html.DisplayNameFor(model => model.Vehicle.BrandName)</td>
+                        <td>@Html.DisplayFor(model => model.Vehicle.BrandName)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Vehicle.RegNo)</td>
+                        <td>@Html.DisplayFor(model => model.Vehicle.RegNo)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Vehicle.ModelName)</td>
+                        <td>@Html.DisplayFor(model => model.Vehicle.ModelName)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Vehicle.SeatCapacity)</td>
+                        <td>@Html.DisplayFor(model => model.Vehicle.SeatCapacity)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Vehicle.VehicleType.Name)</td>
+                        <td>@Html.DisplayFor(model => model.Vehicle.VehicleType.Name)</td>
+                    </tr>
+
+                </table>
+            </div>
         </div>
-        <div class="col-md-4">
-            <h4>Requisition Status Information</h4>
-            <br />
-            <table class="table table-danger table-active table-primary table-hover">
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.RequisitionStatus.StatusType)</td>
-                    <td>@Html.DisplayFor(model => model.RequisitionStatus.StatusType)</td>
-                </tr>
-            </table>
+        <div class="row">
+            <div class="col-md-4">
+                <h4>Driver Information :</h4>
+                <br />
+                <table class="table table-danger table-active table-primary">
+                    <tr>
+                        <td style="width: 25%">@Html.DisplayNameFor(model => model.Employee.FullName)</td>
+                        <td>@Html.DisplayFor(model => model.Employee.FullName)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Employee.Designation.Title)</td>
+                        <td>@Html.DisplayFor(model => model.Employee.Designation.Title)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Employee.ContactNo)</td>
+                        <td>@Html.DisplayFor(model => model.Employee.ContactNo)</td>
+                    </tr>
+                    <tr>
+                        <td>@Html.DisplayNameFor(model => model.Employee.NID)</td>
+                        <td>@Html.DisplayFor(model => model.Employee.NID)</td>
+                    </tr>
+
+                </table>
+            </div>
+            <div class="col-md-4">
+                <h4>Requisition Status Information :</h4>
+                <br/>
+                <table class="table table-danger table-active table-primary">
+                    <tr>
+                        <td style="width: 25%">@Html.DisplayNameFor(model => model.RequisitionStatus.StatusType)</td>
+                        <td>@Html.DisplayFor(model => model.RequisitionStatus.StatusType)</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="col-md-4"></div>
         </div>
     </div>
-
 }
+<br/>
+<div class="container">
+    @using (Html.BeginForm("Edit", "AssignRequisitions", FormMethod.Post))
+    {
+        @Html.AntiForgeryToken()
 
-            @using (Html.BeginForm("Edit","AssignRequisitions",FormMethod.Post))
-            {
-                @Html.AntiForgeryToken()
+        <div class="form-horizontal">
+            <h4>Assigned Requisition Update</h4>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Id)
+            @Html.HiddenFor(model => model.RequisitionId)
 
-                <div class="form-horizontal">
-                    <h4>Assign Requisition Update</h4>
-                    <hr />
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    @Html.HiddenFor(model => model.Id)
-                    @Html.HiddenFor(model=>model.RequisitionId)
-
-                    <div class="form-group row">
-                        @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-4">
-                            @Html.TextBoxFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control",@readonly="readonly" } })
-                            @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    
-                    <div class="form-group row">
-                        @Html.LabelFor(model => model.VehicleId, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-4">
-                            @Html.DropDownList("VehicleId",null, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.VehicleId, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        @Html.LabelFor(model => model.Vehicle.VehicleType.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-4">
-                            @Html.TextBoxFor(model => model.Vehicle.VehicleType.Name, new { htmlAttributes = new { @class = "form-control"} })
-                            @Html.ValidationMessageFor(model => model.Vehicle.VehicleType.Name, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        @Html.Label("Driver Name", htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-4">
-                            @Html.DropDownList("EmployeeId",null, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Employee.FullName, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group row">
-                        @Html.LabelFor(model => model.RequisitionStatus.StatusType, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-4">
-                            @Html.DropDownList("RequisitionStatusId",null, new { htmlAttributes = new { @class = "form-control", @readonly="readonly"} })
-                            @Html.ValidationMessageFor(model => model.RequisitionStatus.StatusType, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Update" class="btn btn-default" />
-                        </div>
-                    </div>
+            <div class="form-group row">
+                @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                    @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new { @class = "text-danger" })
                 </div>
-            }
-
-            <div>
-                @Html.ActionLink("Back to List", "Index")
             </div>
 
-            @section Scripts {
-                @Scripts.Render("~/bundles/jqueryval")
-            }
+
+            <div class="form-group row">
+                @Html.LabelFor(model => model.VehicleId, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-4">
+                    @Html.DropDownList("VehicleId", null, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.VehicleId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group row">
+                @Html.LabelFor(model => model.Vehicle.VehicleType.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.Vehicle.VehicleType.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Vehicle.VehicleType.Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group row">
+                @Html.LabelFor(model=>model.EmployeeId, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-4">
+                    @Html.DropDownList("EmployeeId", null, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group row">
+                @Html.LabelFor(model => model.RequisitionStatus.StatusType, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-4">
+                    @Html.DropDownList("RequisitionStatusId", null, new { @class = "form-control"})
+                    @Html.ValidationMessageFor(model => model.RequisitionStatus.StatusType, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="col-md-2"></div>
+                <div class="col-md-10">
+                    <input type="submit" value="Update" class="btn btn-success" /> &nbsp;
+                    @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-info" })
+                </div>
+            </div>
+        </div>
+    }
+</div>
+            
+
+@section Scripts {
+
+   @Scripts.Render("~/bundles/jqueryval")
+}
