--- a/RMS.App/Views/AssignRequisitions/Error.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Error.cshtml
@@ -9,6 +9,6 @@
 <hr/>
 
 <div class="row">
-    <div class="text text-info">There's No Data Found..! Please Provide Valid Id.....Thanks</div>
+    <div class="text text-info">There's No Data Found, Please Provide Valid Id! Thanks..</div>
 </div>
 
