--- a/RMS.App/Views/AssignRequisitions/Index.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Index.cshtml
@@ -2,9 +2,12 @@
 
 @{
     ViewBag.Title = "Assigned Requisition";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@section styles
+{
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
+}
 <div class="container">
     <h2>Assigned Requisition</h2>
     <hr />
@@ -16,7 +19,7 @@
         </div>
     }
 
-    <div class="container">
+    @*<div class="container">
         <div class="row align-items-center">
             <div class="col-lg-3 col-sm-3 col-3 text-left no-padding">
                 <p>
@@ -35,30 +38,33 @@
                 </p>
             </div>
         </div>
-    </div>
+    </div>*@
+    
+    <table id="example" class="table table-striped table-bordered table-hover" style="width: 100%">
+        <thead>
+            <tr class="bg-info">
+                <th>
+                    SL
+                </th>
+                <th>
+                    @Html.DisplayName("Driver Name")
+                </th>
+                <th>
+                    @Html.DisplayName("From Place")
+                </th>
+                <th>
+                    @Html.DisplayName("Vehicle Brand Name")
+                </th>
+                <th>
+                    @Html.DisplayName("Vehicle Reg No")
+                </th>
 
-    <table class="table table-bordered table-active table-striped">
-        <tr>
-            <th>
-                SL
-            </th>
-            <th>
-                @Html.DisplayName("Driver Name")
-            </th>
-            <th>
-                @Html.DisplayName("From Place")
-            </th>
-            <th>
-                @Html.DisplayName("Vehicle Brand Name")
-            </th>
-            <th>
-                @Html.DisplayName("Vehicle Reg No")
-            </th>
-
-            <th>
-                Action
-            </th>
-        </tr>
+                <th>
+                    Action
+                </th>
+            </tr>
+        </thead>
+        <tbody>
         @{
             var sl = 0;
             if (Model.Count() != 0)
@@ -84,9 +90,9 @@
                         </td>
 
                         <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" })
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-sm" })
                         </td>
                     </tr>
                 }
@@ -98,7 +104,42 @@
                 </tr>
             }
         }
+        </tbody>
+        <tfoot>
+            <tr class="bg-secondary">
+                <th>
+                    SL
+                </th>
+                <th>
+                    @Html.DisplayName("Driver Name")
+                </th>
+                <th>
+                    @Html.DisplayName("From Place")
+                </th>
+                <th>
+                    @Html.DisplayName("Vehicle Brand Name")
+                </th>
+                <th>
+                    @Html.DisplayName("Vehicle Reg No")
+                </th>
+
+                <th>
+                    Action
+                </th>
+            </tr>
+        </tfoot>
     </table>
 </div>
 
+@section scripts
+{
 
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#example').DataTable();
+        });
+    </script>
+}
