--- a/RMS.App/Views/AssignRequisitions/Requests.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Requests.cshtml
@@ -2,14 +2,16 @@
 
 @{
     ViewBag.Title = "New Requests List";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@section styles
+{
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
+}
 <div class="container">
     <h2>New Requests List</h2>
     <hr />
-
-    <div class="container">
+    @*<div class="container">
         <div class="row align-items-center">
             <div class="col-lg-3 col-sm-3 col-3 text-left no-padding">
                 <p>
@@ -28,27 +30,30 @@
                 </p>
             </div>
         </div>
-    </div>
+    </div>*@
 
-    <table class="table table-bordered table-active table-striped">
-        <tr>
-            <th>
-                SL
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.StatusType)
-                
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RequisitionNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RequisitionId)
-            </th>
-            <th>
-                Action
-            </th>
-        </tr>
+    <table id="example" class="table table-striped table-bordered table-hover" style="width: 100%">
+        <thead>
+            <tr class="bg-info">
+                <th>
+                    SL
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.StatusType)
+
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.RequisitionNumber)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.RequisitionId)
+                </th>
+                <th>
+                    Action
+                </th>
+            </tr>
+        </thead>
+        <tbody>
         @{
             var sl = 0;
             if (Model.Count() != 0)
@@ -62,7 +67,7 @@
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.StatusType)
-                            
+
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.RequisitionNumber)
@@ -71,9 +76,9 @@
                             @Html.DisplayFor(modelItem => item.RequisitionId)
                         </td>
                         <td>
-                            @Html.ActionLink("Assign Requisition", "Create", new { requisitionId = item.RequisitionId }) |
-                            @Html.ActionLink("View", "ViewDetails", new {id = item.RequisitionId}) |
-                            @Html.ActionLink("Cancel Requisition", "Cancel", new { statusId = item.Id })
+                            @Html.ActionLink("Assign Requisition", "Create", new { requisitionId = item.RequisitionId }, new { @class = "btn btn-primary btn-sm" })
+                            @Html.ActionLink("View", "ViewDetails", new { id = item.RequisitionId }, new { @class = "btn btn-info btn-sm" })
+                            @Html.ActionLink("Cancel Requisition", "Cancel", new { statusId = item.Id }, new { @class = "btn btn-warning btn-sm" })
 
                         </td>
                     </tr>
@@ -86,7 +91,39 @@
                 </tr>
             }
         }
+        </tbody>
+        <tfoot>
+            <tr class="bg-secondary">
+                <th>
+                    SL
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.StatusType)
+
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.RequisitionNumber)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.RequisitionId)
+                </th>
+                <th>
+                    Action
+                </th>
+            </tr>
+        </tfoot>
     </table>
 </div>
 
+@section scripts
+{
 
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#example').DataTable();
+        });
+    </script>
+}
