--- a/RMS.App/Views/RequisitionStatus/Delete.cshtml
+++ b/RMS.App/Views/RequisitionStatus/Delete.cshtml
@@ -14,11 +14,11 @@
     
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Requisition.RequisitionNumber)
+            @Html.DisplayNameFor(model => model.RequisitionId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Requisition.RequisitionNumber)
+            @Html.DisplayFor(model => model.RequisitionId)
         </dd>
 
         <dt>
