--- a/RMS.App/Views/RequisitionStatus/Edit.cshtml
+++ b/RMS.App/Views/RequisitionStatus/Edit.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit Requisition Status</h2>
+<h2>Update Assigned Requisition Status</h2>
 <hr />
 
 @using (Html.BeginForm())
@@ -18,25 +18,25 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group row">
-            @Html.LabelFor(model => model.StatusType, htmlAttributes: new { @class = "control-label col-md-3" })
-            <div class="col-md-9">
+            @Html.LabelFor(model => model.StatusType, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.StatusType, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.StatusType, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group row">
-            @Html.LabelFor(model => model.RequisitionId, "RequisitionId", htmlAttributes: new { @class = "control-label col-md-3" })
-            <div class="col-md-9">
-                @Html.DropDownList("RequisitionId", null, htmlAttributes: new { @class = "form-control" })
+            @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-5">
+                @Html.DropDownList("RequisitionId", null, htmlAttributes: new { @class = "form-control", @disabled="disabled" })
                 @Html.ValidationMessageFor(model => model.RequisitionId, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group row">
-            <div class="col-md-3"></div>
-            <div class="col-md-9">
-                <input type="submit" value="Save" class="btn btn-default"/> &nbsp;
+            <div class="col-md-2"></div>
+            <div class="col-md-5">
+                <input type="submit" value="Save" class="btn btn-success"/> &nbsp;
                 @Html.ActionLink("Back to List", "Index", null, new {@class = "btn btn-info"})
             </div>
         </div>
