--- a/RMS.App/Views/RequisitionStatus/Index.cshtml
+++ b/RMS.App/Views/RequisitionStatus/Index.cshtml
@@ -4,12 +4,17 @@
     ViewBag.Title = "Requisition Status List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@section styles
+{
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
+}
 <div class="container">
 
     <h2>Requisition Status List</h2>
-    <hr />
+    <hr/>
 
-    <div class="container">
+    @*<div class="container">
         <div class="row align-items-center">
             <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
                 <p></p>
@@ -29,10 +34,11 @@
 
             </div>
         </div>
-    </div>
+    </div>*@
 
-    <table class="table table-bordered table-active table-striped">
-        <tr>
+    <table id="example" class="table table-striped table-bordered table-hover" style="width: 100%">
+        <thead>
+        <tr class="bg-info">
             <th>
                 SL
             </th>
@@ -46,6 +52,8 @@
                 Action
             </th>
         </tr>
+        </thead>
+        <tbody>
         @{
             var sl = 0;
             if (Model.Count() != 0)
@@ -65,9 +73,9 @@
                             @Html.DisplayFor(modelItem => item.StatusType)
                         </td>
                         <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                            @Html.ActionLink("Edit", "Edit", new {id = item.Id}, new { @class = "btn btn-warning btn-sm" })
+                            @Html.ActionLink("Details", "Details", new {id = item.Id}, new { @class = "btn btn-primary btn-sm" })
+                            @Html.ActionLink("Delete", "Delete", new {id = item.Id}, new { @class = "btn btn-danger btn-sm" })
                         </td>
                     </tr>
                 }
@@ -79,6 +87,36 @@
                 </tr>
             }
         }
+        </tbody>
+        <tfoot>
+        <tr class="bg-secondary">
+            <th>
+                SL
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RequisitionNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StatusType)
+            </th>
+            <th>
+                Action
+            </th>
+        </tr>
+        </tfoot>
 
     </table>
 </div>
+
+@section scripts
+{
+
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#example').DataTable();
+        });
+    </script>
+}
