--- a/RMS.App/Views/Requisitions/Feedback.cshtml
+++ b/RMS.App/Views/Requisitions/Feedback.cshtml
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-9">
+                <div class="row">
                     <input type="submit" value="Post" class="btn btn-success" /> &nbsp;
                     @Html.ActionLink("Back to List", "Create","Requisitions", null, new { @class = "btn btn-info" })
                 </div>
@@ -102,21 +102,22 @@
             {
                 <div class="row">
                     <div class="col-md-12">
-                        @Html.Label("Comment", htmlAttributes: new { @class = "control-label col-md-3" })
+                        <p class="text-center" style="font-size: 16px;"><strong>Comment Box</strong></p>
                     </div>
                     <div class="col-md-12">
-                            <table class="table table-bordered">
-                                @foreach (var comment in data)
-                                {
-                                    <tr>
-                                        <td>Employee :&nbsp; @comment.Requisition.Employee.FullName &nbsp;&nbsp;</td>
+                        <table class="table table-bordered">
+                            @Html.Hidden("returnUrl", this.Request.RawUrl)
+                            @foreach (var comment in data)
+                            {
 
-                                        <td>Comment :&nbsp; @comment.CommentText</td>
-                                        <td>@Html.ActionLink("Reply", "Reply", new {feedbackId = @comment.Id},new {@class="btn btn-primary btn-sm"})</td>
+                                <tr>
+                                    <td style="width: 25%">Employee :<br/>@comment.Requisition.Employee.FullName</td>
+                                    <td style="width: 65%">Comment :<br/>@comment.CommentText</td>
+                                    <td style="width: 10%">@Html.ActionLink("Reply", "Reply",new {feedbackId = @comment.Id }, new {@class = "btn btn-primary btn-sm"})</td>
 
-                                    </tr>
-                                }
-                            </table>
+                                </tr>
+                            }
+                        </table>
                         </div>
                 </div>
             }
