--- a/RMS.App/Views/Requisitions/Reply.cshtml
+++ b/RMS.App/Views/Requisitions/Reply.cshtml
@@ -16,19 +16,18 @@
         
         @Html.HiddenFor(model => model.Id)
         @Html.HiddenFor(model => model.RequisitionId)
-
+        @Html.Hidden("returnUrl", this.Request.RawUrl)
         @Html.ValidationSummary(true, "", new {@class = "text-danger"})
 
         <div class="form-group row">
-            @Html.LabelFor(model => model.CommentText, htmlAttributes: new {@class = "control-label col-md-3"})
-            <div class="col-md-5">
+            @Html.LabelFor(model => model.CommentText, htmlAttributes: new {@class = "control-label col-md-12"})
+            <div class="col-md-3">
                 @Html.EditorFor(model => model.CommentText, new {htmlAttributes = new {@class = "form-control"}})
                 @Html.ValidationMessageFor(model => model.CommentText, "", new {@class = "text-danger"})
             </div>
         </div>
 
         <div class="form-group row">
-            <div class="col-md-3"></div>
             <div class="col-md-5">
                 <input type="submit" value="Reply" class="btn btn-primary"/> &nbsp;
                 @Html.ActionLink("Back to List", "Create", "Requisitions", null, new {@class = "btn btn-info"})
