--- a/RMS.App/Views/Employees/Index.cshtml
+++ b/RMS.App/Views/Employees/Index.cshtml
@@ -125,7 +125,7 @@
                         <td>
                             @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
                             @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" })
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-sm" })
+                            
                         </td>
                     </tr>
                 }
@@ -139,7 +139,7 @@
         }
         </tbody>
         <tfoot>
-            <tr class="bg-secondary">
+            <tr class="bg-secondary text-white">
                 <th>
                     SL
                 </th>
