--- a/RMS.App/Views/Employees/Index.cshtml
+++ b/RMS.App/Views/Employees/Index.cshtml
@@ -75,7 +75,7 @@
                 <th>
                     @Html.DisplayNameFor(model => model.EmployeeTypeId)
                 </th>
-                <th>
+                <th class="text-center">
                     Action
                 </th>
             </tr>
@@ -122,7 +122,7 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.EmployeeType.Type)
                         </td>
-                        <td>
+                        <td class="text-right">
                             @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
                             @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" })
                             
@@ -173,7 +173,7 @@
                 <th>
                     @Html.DisplayNameFor(model => model.EmployeeTypeId)
                 </th>
-                <th>
+                <th class="text-center">
                     Action
                 </th>
             </tr>
