--- a/RMS.App/Views/Organizations/Index.cshtml
+++ b/RMS.App/Views/Organizations/Index.cshtml
@@ -55,7 +55,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.RegNo)
             </th>
-            <th>
+            <th class="text-center">
                 Action
             </th>
         </tr>
@@ -82,7 +82,7 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.RegNo)
                         </td>
-                        <td>
+                        <td class="text-right">
                             @Html.ActionLink("Edit", "Edit", new {id = item.Id},new {@class="btn btn-warning btn-sm"}) 
                             @Html.ActionLink("Details", "Details", new {id = item.Id}, new { @class = "btn btn-primary btn-sm" })
                             @Html.ActionLink("Delete", "Delete", new {id = item.Id}, new { @class = "btn btn-danger btn-sm" })
@@ -113,7 +113,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.RegNo)
             </th>
-            <th>
+            <th class="text-center">
                 Action
             </th>
         </tr>
