--- a/RMS.App/Views/AssignRequisitions/Create.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Create.cshtml
@@ -94,7 +94,7 @@
 
                 <div class="form-group row">
 
-                    @Html.Label("RequisitionId", htmlAttributes: new {@class = "control -label col-md-2"})
+                    @Html.Label("RequisitionId", htmlAttributes: new {@class = "control-label col-md-2"})
 
                     <div class="col-md-4">
                         @Html.TextBox("RequisitionId", null, htmlAttributes: new {@class = "form-control", @readonly = "readonly"})
@@ -123,13 +123,16 @@
                 <div class="form-group row">
                     @Html.Label("VehicleType", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-4">
-                        @Html.DropDownList("VehicleType", new SelectList(Model.VehicleTypes, "Id", "Name"), "Select...", htmlAttributes: new { @class = "dropdown form-control", id = "vehicleTypeDD" })
+                        @if (Model != null)
+                        {
+                            @Html.DropDownList("VehicleType", new SelectList(Model.VehicleTypes, "Id", "Name"), "Select...", htmlAttributes: new { @class = "dropdown form-control", id = "vehicleTypeDD" })
+                        }
 
-                    @*@Html.LabelFor(model=>model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @*@Html.LabelFor(model=>model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-4">
                         @Html.TextBox("RequisitionNumber", null, htmlAttributes: new { @class = "form-control", @readonly = "readonly" })
                         @Html.ValidationMessageFor(model=>model.RequisitionNumber, "", new { @class = "text-danger" })
->>>>>>> 5604e6b9ff073b3c781605a3db034e9b5b347593*@
+                    *@
                     </div>
                 </div>
 
