--- a/RMS.App/Views/AssignRequisitions/Index.cshtml
+++ b/RMS.App/Views/AssignRequisitions/Index.cshtml
@@ -59,7 +59,7 @@
                     @Html.DisplayName("Vehicle Reg No")
                 </th>
 
-                <th>
+                <th class="text-center">
                     Action
                 </th>
             </tr>
@@ -89,7 +89,7 @@
                             @Html.DisplayFor(modelItem => item.Vehicle.RegNo)
                         </td>
 
-                        <td>
+                        <td class="text-right">
                             @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
                             @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" })
                             @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-sm" })
@@ -123,7 +123,7 @@
                     @Html.DisplayName("Vehicle Reg No")
                 </th>
 
-                <th>
+                <th class="text-center">
                     Action
                 </th>
             </tr>
