--- a/RMS.App/Views/Departments/Index.cshtml
+++ b/RMS.App/Views/Departments/Index.cshtml
@@ -52,7 +52,9 @@
                 <th>
                     @Html.DisplayNameFor(model => model.Code)
                 </th>
-                <th>Action</th>
+                <th class="text-center">
+                    Action
+                </th>
             </tr>
         </thead>
         <tbody>
@@ -76,7 +78,7 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.Code)
                         </td>
-                        <td>
+                        <td class="text-right">
                             @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-warning btn-sm" })
                             @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" })
                             @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger btn-sm" })
@@ -106,7 +108,9 @@
                 <th>
                     @Html.DisplayNameFor(model => model.Code)
                 </th>
-                <th>Action</th>
+                <th class="text-center">
+                    Action
+                </th>
             </tr>
         </tfoot>
 
