--- a/RMS.App/Views/EmployeeTypes/Index.cshtml
+++ b/RMS.App/Views/EmployeeTypes/Index.cshtml
@@ -47,7 +47,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Type)
             </th>
-            <th>
+            <th class="text-center">
                 Action
             </th>
         </tr>
@@ -67,7 +67,7 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.Type)
                         </td>
-                        <td>
+                        <td class="text-right">
                             @Html.ActionLink("Edit", "Edit", new {id = item.Id}, new {@class = "btn btn-warning btn-sm"})
                             @Html.ActionLink("Details", "Details", new {id = item.Id}, new {@class = "btn btn-primary btn-sm"})
                             @Html.ActionLink("Delete", "Delete", new {id = item.Id}, new {@class = "btn btn-danger btn-sm"})
@@ -91,7 +91,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Type)
             </th>
-            <th>
+            <th class="text-center">
                 Action
             </th>
         </tr>
