--- a/RMS.App/Views/GatePass/CheckIn.cshtml
+++ b/RMS.App/Views/GatePass/CheckIn.cshtml
@@ -2,30 +2,36 @@
 
 @{
     ViewBag.Title = "Check-In List";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@section styles
+{
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
+}
 <h2>Check-In List</h2>
 <hr/>
 
-<table class="table table-bordered table-active table-striped">
-    <tr>
-        <th>
-            SL
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StatusType)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RequisitionNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RequisitionId)
-        </th>
-        <th>
-            Action
-        </th>
-    </tr>
+<table id="example" class="table table-striped table-bordered table-hover" style="width: 100%">
+    <thead>
+        <tr>
+            <th>
+                SL
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StatusType)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RequisitionNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RequisitionId)
+            </th>
+            <th class="text-center">
+                Action
+            </th>
+        </tr>
+    </thead>
+    <tbody>
     @{
         var sl = 0;
         if (Model.Count() != 0)
@@ -47,10 +53,9 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.RequisitionId)
                     </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                        @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-                        @Html.ActionLink("Delete", "Delete", new {id = item.Id})
+                    <td class="text-right">
+                        @Html.ActionLink("Edit", "Edit", new { id = item.Id },new {@class="btn btn-primary"})
+
                     </td>
                 </tr>
             }
@@ -62,5 +67,36 @@
             </tr>
         }
     }
-
+    </tbody>
+    <tfoot>
+        <tr>
+            <th>
+                SL
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StatusType)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RequisitionNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RequisitionId)
+            </th>
+            <th class="text-center">
+                Action
+            </th>
+        </tr>
+    </tfoot>
 </table>
+@section scripts
+{
+
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#example').DataTable();
+        });
+    </script>
+}
