--- a/RMS.App/Views/GatePass/CheckOut.cshtml
+++ b/RMS.App/Views/GatePass/CheckOut.cshtml
@@ -2,7 +2,6 @@
 
 @{
     ViewBag.Title = "Check-Out";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Check-Out</h2>
@@ -19,7 +18,7 @@
 
         <div class="form-group row">
             @Html.LabelFor(model => model.StatusType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.StatusType, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.StatusType, "", new { @class = "text-danger" })
             </div>
@@ -27,7 +26,7 @@
 
         <div class="form-group row">
             @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new { @class = "text-danger" })
             </div>
@@ -35,7 +34,7 @@
 
         <div class="form-group row">
             @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.RequisitionId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RequisitionId, "", new { @class = "text-danger" })
             </div>
@@ -43,8 +42,8 @@
 
         <div class="form-group row">
             <div class="col-md-2"></div>
-            <div class="col-md-10">
-                <input type="submit" value="Save" class="btn btn-default"/> &nbsp;
+            <div class="col-md-5">
+                <input type="submit" value="Check Out" class="btn btn-success"/> &nbsp;
                 @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
             </div>
         </div>
