--- a/RMS.App/Views/GatePass/Edit.cshtml
+++ b/RMS.App/Views/GatePass/Edit.cshtml
@@ -2,7 +2,6 @@
 
 @{
     ViewBag.Title = "Edit Requisition Status";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Edit Requisition Status</h2>
@@ -20,7 +19,7 @@
 
         <div class="form-group row">
             @Html.LabelFor(model => model.StatusType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.StatusType, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.StatusType, "", new { @class = "text-danger" })
             </div>
@@ -28,7 +27,7 @@
 
         <div class="form-group row">
             @Html.LabelFor(model => model.RequisitionNumber, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.RequisitionNumber, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RequisitionNumber, "", new { @class = "text-danger" })
             </div>
@@ -36,7 +35,7 @@
 
         <div class="form-group row">
             @Html.LabelFor(model => model.RequisitionId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.RequisitionId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RequisitionId, "", new { @class = "text-danger" })
             </div>
@@ -44,8 +43,8 @@
 
         <div class="form-group row">
             <div class="col-md-2"></div>
-            <div class="col-md-10">
-                <input type="submit" value="Save" class="btn btn-default"/> &nbsp;
+            <div class="col-md-5">
+                <input type="submit" value="Update" class="btn btn-success"/> &nbsp;
                 @Html.ActionLink("Back to List", "Index",null,new {@class="btn btn-info"})
             </div>
         </div>
