--- a/RMS.App/Views/GatePass/Index.cshtml
+++ b/RMS.App/Views/GatePass/Index.cshtml
@@ -2,13 +2,16 @@
 
 @{
     ViewBag.Title = "Check-Out List";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@section styles
+{
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
+    <link href="https://cdn.datatables.net/1.10.19/css/dataTables.semanticui.min.css" rel="stylesheet" />
+}
 <h2>Check-Out List</h2>
 <hr/>
 
-<div class="container">
+@*<div class="container">
     <div class="row align-items-center">
         <div class="col-lg-4 col-sm-4 col-4 header-top-left no-padding">
         </div>
@@ -22,33 +25,36 @@
                 }
             </p>
 
-            @*@Html.Partial("~/Views/GatePass/RequisitionIndex.cshtml")*@
+            @Html.Partial("~/Views/GatePass/RequisitionIndex.cshtml")
         </div>
     </div>
-</div>
+</div>*@
 <br/>
-<table class="table table-bordered table-active table-striped">
-    <tr>
-        <th>
-            SL
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Id)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StatusType)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RequisitionId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Requisition.RequisitionNumber)
-        </th>
+<table id="example1" class="table table-striped table-bordered table-hover" style="width: 100%">
+    <thead>
+        <tr>
+            <th>
+                SL
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StatusType)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RequisitionId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Requisition.RequisitionNumber)
+            </th>
 
-        <th>
-            Action
-        </th>
-    </tr>
+            <th class="text-center">
+                Action
+            </th>
+        </tr>
+    </thead>
+    <tbody>
     @{
         var sl = 0;
         if (Model.Count() != 0)
@@ -73,9 +79,8 @@
                         @Html.DisplayFor(modelItem => item.Requisition.RequisitionNumber)
                     </td>
 
-                    <td>
-                        @Html.ActionLink("Check-Out", "CheckOut", new {id = item.Id}) |
-                        @Html.ActionLink("Check-In", "Details", new {id = item.RequisitionId})
+                    <td class="text-right">
+                        @Html.ActionLink("Check-Out", "CheckOut", new { id = item.Id },new {@class="btn btn-success"})
                     </td>
                 </tr>
             }
@@ -87,6 +92,40 @@
             </tr>
         }
     }
+    </tbody>
+    <tfoot>
+        <tr>
+            <th>
+                SL
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.StatusType)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RequisitionId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Requisition.RequisitionNumber)
+            </th>
 
-
+            <th class="text-center">
+                Action
+            </th>
+        </tr>
+    </tfoot>
 </table>
+@section scripts
+{
+
+    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.semanticui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#example1').DataTable();
+        });
+    </script>
+}
