--- a/RMS.App/Views/RequisitionStatus/Index.cshtml
+++ b/RMS.App/Views/RequisitionStatus/Index.cshtml
@@ -48,7 +48,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.StatusType)
             </th>
-            <th>
+            <th class="text-center">
                 Action
             </th>
         </tr>
@@ -72,7 +72,7 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.StatusType)
                         </td>
-                        <td>
+                        <td class="text-right">
                             @Html.ActionLink("Edit", "Edit", new {id = item.Id}, new { @class = "btn btn-warning btn-sm" })
                             @Html.ActionLink("Details", "Details", new {id = item.Id}, new { @class = "btn btn-primary btn-sm" })
                             @Html.ActionLink("Delete", "Delete", new {id = item.Id}, new { @class = "btn btn-danger btn-sm" })
@@ -99,7 +99,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.StatusType)
             </th>
-            <th>
+            <th class="text-center">
                 Action
             </th>
         </tr>
