--- a/RMS.App/Views/Requisitions/Reply.cshtml
+++ b/RMS.App/Views/Requisitions/Reply.cshtml
@@ -8,7 +8,7 @@
 <h2>Reply</h2>
 <hr/>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Reply","Requisitions",FormMethod.Post)) 
 {
     @Html.AntiForgeryToken()
 
@@ -19,6 +19,12 @@
         @Html.Hidden("returnUrl", this.Request.RawUrl)
         @Html.ValidationSummary(true, "", new {@class = "text-danger"})
 
+        <div class="form-group row">
+            @if (ViewBag.Msg != null)
+            {
+                <div>@ViewBag.Msg</div>
+            }
+        </div>
         <div class="form-group row">
             @Html.LabelFor(model => model.CommentText, htmlAttributes: new {@class = "control-label col-md-12"})
             <div class="col-md-3">
